# untitled

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compose.yaml  serve.sh  vcpkg.json
client/: CMakeLists.txt
client/materials/: character.mat  lit.mat  ui.mat  unlit.mat
client/src/: application.cpp  application.h  camera_controller.cpp  camera_controller.h  main.cpp  mesh.cpp  mesh.h  native_window.cpp  native_window.h  net_client.cpp  net_client.h  prediction.cpp  prediction.h  scene.cpp  scene.h  screens.cpp  screens.h  sky.cpp  sky.h
client/src/ui/: font.cpp  font.h  ui_renderer.cpp  ui_renderer.h  widgets.cpp  widgets.h
cmake/: Dependencies.cmake
common/gamesim/: CMakeLists.txt
common/gamesim/include/gamesim/: character.h
common/gamesim/src/: character.cpp
common/net/: CMakeLists.txt
common/net/include/net/: byte_stream.h  framing.h  protocol.h  snapshot.h  socket.h
common/net/src/: framing.cpp  protocol.cpp  snapshot.cpp  socket.cpp
common/terrain/: CMakeLists.txt
common/terrain/include/terrain/: heightfield.h
common/terrain/src/: heightfield.cpp
docker/: server.Dockerfile
server/: CMakeLists.txt
server/authserver/src/: main.cpp
server/common/include/serverutil/: config.h  db_client.h  log.h  tcp_server.h
server/common/src/: db_client.cpp  tcp_server.cpp
server/dbserver/src/: database.cpp  database.h  main.cpp
server/sql/: schema.sql
server/tools/src/: admin.cpp  authcli.cpp  console.cpp  worldcli.cpp
server/worldserver/src/: console.cpp  console.h  main.cpp  simulation.cpp  simulation.h
